--- a/Curso_Python_32h_Aula04.ipynb
+++ b/Curso_Python_32h_Aula04.ipynb
@@ -6,7 +6,7 @@
       "name": "Curso_Python_32h_Aula04.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP3DjTkEaJkz/DXmMYNKwwb",
+      "authorship_tag": "ABX9TyPdu2L0g9lYdKcIsfr9hSit",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -479,6 +479,364 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Aula 04 - Listas"
+      ],
+      "metadata": {
+        "id": "Ua4B_fGxl8xN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista = [\"Maçã\", \"Uva\", \"Abacate\", \"Laranja\"]\n",
+        "print(lista)\n",
+        "print( type(lista) )\n",
+        "print(lista[3])\n",
+        "print( type(lista[3] ))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LysbB-8wl_KK",
+        "outputId": "e8a085e2-7c01-40a6-df5b-e922e0d07150"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Maçã', 'Uva', 'Abacate', 'Laranja']\n",
+            "<class 'list'>\n",
+            "Laranja\n",
+            "<class 'str'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(lista)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IQP565TzmtLu",
+        "outputId": "01c3aaa6-99c9-42c2-c455-0231899dce2b"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista_numeros = [2.3, 3.4, 5.6, 1.0]\n",
+        "print(max(lista_numeros))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X5bo4gkZoZf4",
+        "outputId": "722f8155-c0b0-4f82-9251-0a6d5ddeb596"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5.6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "item = input(\"Digite um item para a lista de compras. Digite 0 para sair: \")\n",
+        "while item != \"0\":\n",
+        "  lista.append(item)\n",
+        "  print(\"Item\", item, \"adicionado com sucesso!\")\n",
+        "  item = input(\"Digite um item para a lista de compras. Digite 0 para sair: \")\n",
+        "print(lista)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M6bIs5GXoetA",
+        "outputId": "f6e88284-ad67-451e-e66f-a6a148e0ba1f"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um item para a lista de compras. Digite 0 para sair: Banana\n",
+            "Item Banana adicionado com sucesso!\n",
+            "Digite um item para a lista de compras. Digite 0 para sair: Batata\n",
+            "Item Batata adicionado com sucesso!\n",
+            "Digite um item para a lista de compras. Digite 0 para sair: Pastel\n",
+            "Item Pastel adicionado com sucesso!\n",
+            "Digite um item para a lista de compras. Digite 0 para sair: 0\n",
+            "['Maçã', 'Uva', 'Abacate', 'Laranja', 'Banana', 'Batata', 'Pastel']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "item = input(\"Digite um item para remover da lista de compras. Digite 0 para sair: \")\n",
+        "while item != \"0\":\n",
+        "  lista.remove(item)\n",
+        "  print(\"Item\", item, \"removido com sucesso!\")\n",
+        "  item = input(\"Digite um item para remover da lista de compras. Digite 0 para sair: \")\n",
+        "print(lista)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RkeF7ImkpbmQ",
+        "outputId": "55a7032a-c0c2-4e73-dca5-0ef7655186ea"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um item para remover da lista de compras. Digite 0 para sair: Uva\n",
+            "Item Uva removido com sucesso!\n",
+            "Digite um item para remover da lista de compras. Digite 0 para sair: Banana\n",
+            "Item Banana removido com sucesso!\n",
+            "Digite um item para remover da lista de compras. Digite 0 para sair: Pastel\n",
+            "Item Pastel removido com sucesso!\n",
+            "Digite um item para remover da lista de compras. Digite 0 para sair: 0\n",
+            "['Maçã', 'Abacate', 'Laranja', 'Batata']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista2 = [\"tijolo\", \"cimento\", \"azulejo\", \"gesso\"]\n",
+        "lista2.append(\"parafuso\")\n",
+        "print(lista2)\n",
+        "lista2.remove(\"cimento\")\n",
+        "print(lista2)\n",
+        "lista2.append(input(\"Digite um material: \"))\n",
+        "print(lista2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o_u5-D8zqiTp",
+        "outputId": "36199d70-5426-46c6-bf2b-e3e9b3b72400"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['tijolo', 'cimento', 'azulejo', 'gesso', 'parafuso']\n",
+            "['tijolo', 'azulejo', 'gesso', 'parafuso']\n",
+            "Digite um material: areia\n",
+            "['tijolo', 'azulejo', 'gesso', 'parafuso', 'areia']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista3 = []\n",
+        "for x in range(10):\n",
+        "  lista3.append(x)\n",
+        "print(lista3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TpqdoSiYqyKt",
+        "outputId": "f710c1b2-9045-47d8-eb7d-12ba4074c76d"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for item in lista2:\n",
+        "  print(item)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wkCtlu9xrpYo",
+        "outputId": "6fd1a6d8-5ecf-4bb2-8804-8386aa4b474d"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tijolo\n",
+            "azulejo\n",
+            "gesso\n",
+            "parafuso\n",
+            "areia\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range( len(lista2) ):\n",
+        "  print(lista2[i])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YIBa-CcKr5zE",
+        "outputId": "ecd0441d-83c1-4405-d072-fa1f68b073c1"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tijolo\n",
+            "azulejo\n",
+            "gesso\n",
+            "parafuso\n",
+            "areia\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista.extend(lista2)\n",
+        "print(lista)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w1-CABnTsKx2",
+        "outputId": "e8891953-5d53-4540-e702-ae8ebd890027"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Maçã', 'Abacate', 'Laranja', 'Batata', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 'tijolo', 'azulejo', 'gesso', 'parafuso', 'areia']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista.clear()\n",
+        "print(lista)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UZs3k39tsls_",
+        "outputId": "15d7dd1f-daac-436d-e669-8ff06f03a666"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "item = lista2.pop(2)\n",
+        "print(item)\n",
+        "print(lista2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5q07rlj6tM0D",
+        "outputId": "02ae3ce0-047d-4f69-c999-d9a591d150ca"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "gesso\n",
+            "['tijolo', 'azulejo', 'parafuso', 'areia']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "2Qoa1spjtU23"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
